kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: "/frontend"
        backend:
          serviceName: frontend
          servicePort: 80
      - path: "/backend"
        backend:
          serviceName: backend
          servicePort: 80
